--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "2.4",
         "laravelcollective/html": "^6.2",
+        "livewire/livewire": "^2.8",
         "mcamara/laravel-localization": "^1.6",
         "spatie/laravel-translatable": "^4.6",
         "yoeunes/toastr": "^1.2"
