install macsidigital/laravel-zoom package for integration with zoom , add new link in main_sidebar view , add new route online_classes - indirect , create OnlineClassController with model and migration file , finish ( index - create - store - indirectCreate - edit -update - indirectUpdate - destroy ) in this OnlineClassController , create MeetingZoomTrait and call it in OnlineClassController , create online_classes ( add - edit - show_all - indirect_add - indirect_edit ) ,

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/ui": "2.4",
         "laravelcollective/html": "^6.2",
         "livewire/livewire": "^2.8",
+        "macsidigital/laravel-zoom": "^4.0",
         "mcamara/laravel-localization": "^1.6",
         "spatie/laravel-translatable": "^4.6",
         "yoeunes/toastr": "^1.2"
